# GeometryUtils

./: .gitignore  CMakeLists.txt  README.md  geometry.cpp  geometry.hpp  main.cpp  threadpool.hpp
tests/: triangle_plane_tests.cpp
